# kytea-tokenizer

./: Cargo.toml  README.md  build.rs
lib/: ckytea.cpp
src/: cmd.rs  ffi.rs  kytea.rs  lib.rs  pos.rs  tokenizer.rs
src/parser/: mod.rs  surface.rs  tag.rs  words.rs
src/tokenizer/: mod.rs  surface.rs  tag.rs  word.rs  words.rs
