[package]
name = "kytea-tokenizer"
version = "0.4.0"
edition = "2018"
authors = ["Masato Nakata <masaton@naughie.com>"]
description = "Wrapper of tokenization by KyTea"
license = "MIT OR Apache-2.0"
repository = "https://github.com/naughie/kytea-tokenizer"
documentation = "https://docs.rs/kytea-tokenizer"
keywords = ["kytea", "japanese", "morphological", "analyzer"]
categories = ["text-processing"]
readme = "README.md"
include = ["src/", "LICENSE-*", "README.md"]


[features]
default = []
json = ["serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
strum = { version = "0.22", features = ["derive"] }
tantivy = { version = "0.16", optional = true }

num-traits = "0.2"
num-derive = "0.3"

[dev-dependencies]
serde_json = "1"

[package.metadata.docs.rs]
all-features = true
