[package]
name = "kytea-tokenizer"
version = "0.6.3"
edition = "2021"
authors = ["Masato Nakata <masaton@naughie.com>"]
description = "Wrapper of tokenization by KyTea"
license = "MIT OR Apache-2.0"
repository = "https://github.com/naughie/kytea-tokenizer"
documentation = "https://docs.rs/kytea-tokenizer"
keywords = ["kytea", "japanese", "morphological", "analyzer"]
categories = ["text-processing"]
readme = "README.md"
include = ["src/", "lib/", "build.rs", "LICENSE-*", "README.md"]
build = "build.rs"


[features]
default = []
json = ["serde"]
ffi = ["libc", "cc"]
cmd = []

[dependencies]
libc = { version = "0.2", optional = true }

serde = { version = "1.0", features = ["derive"], optional = true }
strum = { version = "0.22", features = ["derive"] }

num-traits = "0.2"
num-derive = "0.3"

[dev-dependencies]
serde_json = "1"

[build-dependencies]
cc = { version = "1.0", optional = true }

[package.metadata.docs.rs]
all-features = true
